<resources>
    <string name="app_name">Final Project App</string>
    <string name="advisedPassword">advised password </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">invalid_password</string>
    <string name="invalid_password_length">Password must be between 6–20 characters</string>
    <string name="invalid_reaped_password_not_same">Password no the same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings_enable_header">Enable/Disable</string>
    <string name="default_web_client_id">445654267827-ohr6njqepigkpqjv2c0obmspdpjbjh2d.apps.googleusercontent.com</string>
    <string name="loading_data">Loading data</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_default_autofill_service">Set default Autofill service</string>
    <string name="activate_second_factor_authentication">activate Second Factor Authentication</string>
    <string name="_2_factor_authentication">2 Factor Authentication</string>
    <string name="copy">Copy</string>
    <string name="revel">Revel</string>
    <string name="credentials_more_info">info</string>
    <string name="delete_data_set">Delete</string>
    <string name="check_for_repeated_passwords">check for repeated passwords</string>
    <string name="facebook_app_id">need to add my id</string>
    <string name="fb_login_protocol_scheme">need to add my fb schame</string>
    <string name="settings_disconnect_button">Disconnect</string>
    <string name="settings_disconnect_label">Disconnect will delete all data in device</string>
    <string name="action_register">Register</string>
    <string name="other_sing_in_options">Other sing in options</string>
    <string name="password_requirements">Password must include between 6 to 20 characters small digit, large digit and spacial character </string>
    <string name="password">Password</string>
    <string name="my_app_name">PASCEMANGER</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="security_risks">Security Risks :</string>
    <string name="repeated_password">Repeated Password</string>
    <string name="confirm">confirm</string>
    <string name="creditCard">CreditCard </string>
    <string name="menu_refresh">refresh</string>

</resources>
