<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_large">

        <TextView
            style="@style/Settings.Header"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_enable_header"
        />

        <LinearLayout
            android:id="@+id/settingsSetServiceContainer"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/settingsSetServiceLabel"
            style="@style/Settings.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_default_autofill_service" />

            <Switch
                android:id="@+id/settingsSetServiceSwitch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsSetCheckRepeatedPasswords"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settingsSetRepeatedPasswordsLabel"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_for_repeated_passwords" />

            <Switch
                android:id="@+id/settingsSetRepeatedPasswordsSwitch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"/>


        </LinearLayout>

        <TextView
            style="@style/Settings.Header"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_factor_authentication"
            />
        <LinearLayout
            android:id="@+id/settingsSetSecondFactorAuthenticationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Settings.Container"
            >
            <TextView
                android:id="@+id/settingsSetSecondFactorAuthentication"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activate_second_factor_authentication" />
            <Switch
                android:id="@+id/settingsSetSecondFactorAuthenticationSwitch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"/>
            <Spinner
                android:id="@+id/second_factor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/second_factor_confirm_button"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="confirm"/>



        <TextView
            style="@style/Settings.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Encryption"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Warning: may impact performance"
            android:textColor="#FF0000" />
        <LinearLayout
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Settings.Container"
            >
            <TextView
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="choose encryption " />

            <Spinner
                android:id="@+id/encryption_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_disconnect_layout"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_disconnect_button"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/Settings.Label"
                android:layout_width="wrap_content"
                android:text="@string/settings_disconnect_label"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>