<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_top_text"
        style="@style/Credentials.text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:helperTextEnabled="true"
        app:startIconContentDescription="username"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        app:endIconMode="password_toggle"
        android:id="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_inner"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:enabled="false"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="enter user name or email"
        app:helperTextEnabled="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        app:endIconMode="clear_text"
        android:id="@+id/username"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_inner"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"
            />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Credentials.text.big"
            android:layout_width="wrap_content"
            android:text="@string/other_sing_in_options"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sigh_in"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal" />
    </LinearLayout>








    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>